--- a/src/app/modules/loan/cl-purpose/cl-purpose.component.html
+++ b/src/app/modules/loan/cl-purpose/cl-purpose.component.html
@@ -50,7 +50,7 @@
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Cultivated Area(Marla) <strong class="matMandatory"></strong>
                         </mat-label>
-                        <input matInput placeholder="Enter Production Loan Amount" formControlName="CultivatedArea"
+                        <input matInput placeholder="Cultivated Area(Marla)" formControlName="CultivatedArea"
                                appNumberOnly/>
                     </mat-form-field>
                 </div>
