--- a/src/app/modules/customer/submit-customers/submit-customers.component.html
+++ b/src/app/modules/customer/submit-customers/submit-customers.component.html
@@ -129,7 +129,7 @@
                             <mat-icon style="margin-left: 2px;" title="Edit Customer">edit</mat-icon>
                         </button>
 
-                        <button mat-icon-button color="primary" *ngIf="CheckViewStatus(customer)"
+                        <button mat-icon-button color="primary" *ngIf="!CheckEditStatus(customer)"
                                 (click)="viewCustomer(customer)">
                             <mat-icon style="margin-left: 2px;" title="View Customer">visibility</mat-icon>
                         </button>
