--- a/src/app/modules/user-management/activity/activity-edit/activity-form.dialog.component.html
+++ b/src/app/modules/user-management/activity/activity-edit/activity-form.dialog.component.html
@@ -1,119 +1,134 @@
 <div class="kt-portlet"
      [class]="{ 'kt-portlet--body-progress' : viewLoading, 'kt-portlet--body-progress-overlay' : loadingAfterSubmit }">
-  <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
-    <div class="kt-portlet__head-label flex">
-      <h3 class=" w-11/12 text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">{{getTitle()}}</h3>
-      <button type="button"   color="danger" class="w-1/12 text-right" [mat-dialog-close]="data.animal"
-      cdkFocusInitial>
-      <mat-icon class="text-red-500">cancel</mat-icon>
-      </button>
+    <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
+        <div class="kt-portlet__head-label flex">
+            <h3 class=" w-11/12 text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2"
+                style="background-color: #f6fcf8;">{{getTitle()}}</h3>
+            <button type="button" color="danger" class="w-1/12 text-right" [mat-dialog-close]="data.animal"
+                    cdkFocusInitial>
+                <mat-icon class="text-red-500">cancel</mat-icon>
+            </button>
+        </div>
     </div>
-  </div>
-  <div>
-    <form [formGroup]="activityForm" class="kt-form kt-form--group-seperator-dashed">
-      <div class="kt-form">
-        <div class="kt-portlet__body">
-          <kt-alert *ngIf="hasFormErrors" type="warn" [duration]="30000" [showCloseButton]="true"
-                    (close)="onAlertClose($event)">
-            Oh snap! Change a few things up and try submitting again.
-          </kt-alert>
+    <div>
+        <form [formGroup]="activityForm" class="kt-form kt-form--group-seperator-dashed">
+            <div class="kt-form">
+                <div class="kt-portlet__body">
+                    <kt-alert *ngIf="hasFormErrors" type="warn" [duration]="30000" [showCloseButton]="true"
+                              (close)="onAlertClose($event)">
+                        Oh snap! Change a few things up and try submitting again.
+                    </kt-alert>
 
-          <div class="form-group kt-form__group row" >
-            <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
-              <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                <input matInput placeholder="Enter Page Name" formControlName="ActivityName" maxlength="30"
-                       autocomplete="off"/>
-                <mat-error *ngIf="hasError('ActivityName', 'required')">Name <strong>required</strong></mat-error>
-                <!-- <mat-hint align="start">Please enter <strong>Page Name</strong></mat-hint> -->
-              </mat-form-field>
+                    <div class="form-group kt-form__group row">
+                        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                <input matInput placeholder="Enter Page Name" formControlName="ActivityName"
+                                       maxlength="30"
+                                       autocomplete="off"/>
+                                <mat-error *ngIf="hasError('ActivityName', 'required')">Name <strong>required</strong>
+                                </mat-error>
+                                <!-- <mat-hint align="start">Please enter <strong>Page Name</strong></mat-hint> -->
+                            </mat-form-field>
+                        </div>
+                        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
+
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                <mat-label for="ActivityUrl">Enter URL</mat-label>
+
+                                <input matInput placeholder="Enter URL" formControlName="ActivityUrl" maxlength="60"
+                                       autocomplete="off"/>
+                            </mat-form-field>
+                        </div>
+                        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile" *ngIf="!isVisible">
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                <mat-label for="PageIcon">Enter Icon</mat-label>
+
+                                <input matInput placeholder="Enter Page Icon" formControlName="PageIcon" maxlength="60"
+                                />
+                                <!--                <input  (iconPickerSelect)="onIconPickerSelect(newIcon)"/>-->
+
+                            </mat-form-field>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile" *ngIf="isVisible">
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                <mat-label for="TagName">Enter Tag</mat-label>
+
+                                <input matInput placeholder="Enter Tag" formControlName="TagName" maxlength="60"
+                                       autocomplete="off"/>
+                            </mat-form-field>
+                        </div>
+                        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile" *ngIf="isVisible">
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                <mat-label for="PageSequence">Page Sequence</mat-label>
+
+                                <input matInput appNumberOnly placeholder="Page Sequence" formControlName="PageSequence"
+                                       autocomplete="off"/>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                    <div class="row">
+
+                        <div class="col-lg-3 col-sm-12 kt-margin-bottom-20-mobile">
+                            <mat-checkbox style="margin-top: 15px;" formControlName="IsParent"
+                                          [checked]="this.data.activity.isParent"
+                                          (change)="showOrHide($event)"><span>Is Parent?</span>
+                            </mat-checkbox>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-3 col-sm-12 kt-margin-bottom-20-mobile mb-3">
+                            <mat-checkbox style="margin-top: 15px;" formControlName="IsActive"
+                                          [checked]="this.data.activity.isActive"
+                            ><span>Is Active?</span>
+                            </mat-checkbox>
+                        </div>
+
+
+                    </div>
+                    <div *ngIf="isVisible">
+
+                        <div class="row">
+                            <div class="col-lg-12 col-md-12 kt-margin-bottom-20-mobile">
+                                <mat-error *ngIf="errorShow">
+                                    <strong>Please Select Parent</strong>
+                                </mat-error>
+                            </div>
+                        </div>
+
+                        <div class="form-group kt-form__group row">
+                            <div class="col-lg-4 col-sm-12 mt-2 kt-margin-bottom-20-mobile">
+                                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                    <mat-label>Parent</mat-label>
+                                    <mat-select formControlName="ParentActivityID" name="ParentActivityID">
+                                        <mat-option *ngFor="let item of parentActivities" [value]="item.ActivityID">
+                                            {{item.ActivityName}}
+                                        </mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="kt-portlet__foot kt-portlet__foot--fit kt-portlet__no-border pt-4 border-t">
+                    <div class="kt-form__actions kt-form__actions--solid">
+                        <div class="row text-right">
+                            <div class="col-lg-12">
+
+                                <button type="button" class="btn btn-primary bg-green" mat-raised-button color="primary"
+                                        (click)="onSubmit()"
+                                        [disabled]="viewLoading || submitted">
+                                    <mat-icon class="mr-2">save</mat-icon>
+                                    Save
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
-
-              <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                <mat-label for="ActivityUrl">Enter URL</mat-label>
-
-                <input matInput placeholder="Enter URL" formControlName="ActivityUrl" maxlength="60"
-                       autocomplete="off"/>
-              </mat-form-field>
-            </div>
-            <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile" *ngIf="!isVisible">
-              <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                <mat-label for="PageIcon">Enter Icon</mat-label>
-                
-                <input matInput placeholder="Enter Page Icon" formControlName="PageIcon" maxlength="60"
-                      />
-                <!--                <input  (iconPickerSelect)="onIconPickerSelect(newIcon)"/>-->
-
-              </mat-form-field>
-            </div>
-           </div>
-           <div class="row"> 
-            <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile" *ngIf="isVisible">
-              <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                <input matInput placeholder="Enter Tag" formControlName="TagName" maxlength="60"
-                       autocomplete="off"/>
-              </mat-form-field>
-            </div>
-            </div>
-            <div class="row">
-
-              <div class="col-lg-3 col-sm-12 kt-margin-bottom-20-mobile" >
-                <mat-checkbox style="margin-top: 15px;" formControlName="IsParent"
-                              [checked]="this.data.activity.isParent"
-                              (change)="showOrHide($event)"><span>Is Parent?</span>
-                </mat-checkbox>
-              </div>
-            </div>
-            <div class="row">  
-              <div class="col-lg-3 col-sm-12 kt-margin-bottom-20-mobile mb-3" >
-                <mat-checkbox style="margin-top: 15px;" formControlName="IsActive"
-                              [checked]="this.data.activity.isActive"
-                              ><span>Is Active?</span>
-                </mat-checkbox>
-              </div>
-
-
-          </div>
-          <div *ngIf="isVisible">
-
-            <div class="row">
-              <div class="col-lg-12 col-md-12 kt-margin-bottom-20-mobile">
-                <mat-error *ngIf="errorShow">
-                  <strong>Please Select Parent</strong>
-                </mat-error>
-              </div>
-            </div>
-
-            <div class="form-group kt-form__group row">
-              <div class="col-lg-4 col-sm-12 mt-2 kt-margin-bottom-20-mobile">
-                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                  <mat-label>Parent</mat-label>
-                  <mat-select formControlName="ParentActivityID" name="ParentActivityID">
-                    <mat-option *ngFor="let item of parentActivities" [value]="item.ActivityID">
-                      {{item.ActivityName}}
-                    </mat-option>
-                  </mat-select>
-                </mat-form-field>
-              </div>
-            </div>
-
-          </div>
-        </div>
-
-        <div class="kt-portlet__foot kt-portlet__foot--fit kt-portlet__no-border pt-4 border-t">
-          <div class="kt-form__actions kt-form__actions--solid">
-            <div class="row text-right">
-              <div class="col-lg-12">
-
-                <button  type="button" class="btn btn-primary bg-green" mat-raised-button color="primary" (click)="onSubmit()"
-                        [disabled]="viewLoading || submitted">
-                        <mat-icon class="mr-2">save</mat-icon> Save
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </form>
-  </div>
+        </form>
+    </div>
 </div>
