--- a/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
+++ b/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
@@ -89,7 +89,7 @@
                                         </mat-form-field>
                                     </td>
                                     <td><span (click)="onSavePersonalSuretiesForm()">Save</span> | <span
-                                        (click)="personalSuretiesForm.reset()">Cancel</span>
+                                        (click)="onClearLoanSuretiesForm()">Cancel</span>
                                     </td>
                                 </tr>
                                 </tbody>
@@ -298,7 +298,7 @@
                                         </mat-form-field>
                                     </td>
                                     <td><span (click)="onSaveLoanRefrencesForm()">Save</span> | <span
-                                        (click)="loanRefrencesForm.reset()">Cancel</span></td>
+                                        (click)="onClearLoanRefrencesForm()">Cancel</span></td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -388,7 +388,7 @@
                                         </mat-form-field>
                                     </td>
                                     <td><span (click)="onSaveLoanWitnessForm()">Save</span> | <span
-                                        (click)="loanWitnessForm.reset()">Cancel</span></td>
+                                        (click)="onClearLoanWitnessForm()">Cancel</span></td>
                                 </tr>
                                 </tbody>
                             </table>
