Customers dynamic implementation

--- a/src/app/modules/customer/customer-list/customer-list.component.html
+++ b/src/app/modules/customer/customer-list/customer-list.component.html
@@ -94,7 +94,7 @@
                                     class=" mt-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary bg-gray-500"
                                     mat-raised-button
                                     type="button"
-                                    (click)="searchCustomer()">
+                                    (click)="searchCustomer(true)">
                                     <mat-icon class="mr-2">search</mat-icon>
                                     Search
                                 </button>
