--- a/src/app/shared/crud/alert-message/alert-message.component.html
+++ b/src/app/shared/crud/alert-message/alert-message.component.html
@@ -1,23 +1,26 @@
 <div class="kt-portlet">
-	<div class="kt-form">
-		<div class="kt-portlet__body">
-		
-			<div class="form-group">
+    <div class="kt-form">
+        <div class="kt-portlet__body">
 
-				<div class="col-lg-12 text-center mt-1">
-					<img src="./assets/media/icons/confirmation.jpg" class="img-responsive center-block w-32 mx-auto" alt="icon" />
-				</div>
+            <div class="form-group">
 
-				<div class="col-lg-12 text-center mt-5">
-					<span style="font-weight:500">{{data.description}}</span>
-				</div>
-			</div>
-			</div>
-			<div class="kt-portlet__foot kt-portlet__no-border kt-portlet__foot--fit text-center">
-				<div class="kt-form__actions kt-form__actions--sm  mt-4">
-					<!--<button mat-button (click)="onNoClick()">Cancel</button>&nbsp;-->
-					<button mat-button (click)="onNoClick()" class="btn btn-success btn-block bg-green" color="primary" cdkFocusInitial [disabled]="viewLoading">OK</button>
-				</div>
-			</div>
-		</div>
+                <div class="col-lg-12 text-center mt-1">
+                    <img src="./assets/media/icons/confirmation.jpg" class="img-responsive center-block w-32 mx-auto"
+                         alt="icon"/>
+                </div>
+
+                <div class="col-lg-12 text-center mt-5">
+                    <span style="font-weight:500" [innerHTML]="data.description"></span>
+                </div>
+            </div>
+        </div>
+        <div class="kt-portlet__foot kt-portlet__no-border kt-portlet__foot--fit text-center">
+            <div class="kt-form__actions kt-form__actions--sm  mt-4">
+                <!--<button mat-button (click)="onNoClick()">Cancel</button>&nbsp;-->
+                <button mat-button (click)="onNoClick()" class="btn btn-success btn-block bg-green" color="primary"
+                        cdkFocusInitial [disabled]="viewLoading">OK
+                </button>
+            </div>
+        </div>
+    </div>
 </div>
