--- a/src/app/modules/loan-recovery/recovery-form/recovery-form.component.html
+++ b/src/app/modules/loan-recovery/recovery-form/recovery-form.component.html
@@ -5,10 +5,10 @@
 
 
     <div class="row pt-3 pb-0">
-        <div class="col-lg-9 col-sm-12">
+        <div class="col-lg-12 col-sm-12">
             <div class="heading">{{getTitle()}}</div>
         </div>
-        <div class="col-lg-3 col-sm-12 self-center">
+        <!-- <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
                 <button class="mt-1  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
                         color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
@@ -18,13 +18,9 @@
                     Advance Filter
                 </button>
             </p>
-        </div>
+        </div> -->
     </div>
     <!-- Header -->
-
-    <div class="collapse show" id="collapseExample">
-        <div class="card card-body">
-
             <div class="flex flex-auto overflow-y-scroll overflow-x-hidden " style="flex-direction: column;">
                 <form [formGroup]="RecoveryForm" class="kt-form kt-form--group-seperator-dashed">
                     <div class="kt-form">
@@ -558,8 +554,6 @@
         
             </div>
 
-        </div>
-    </div>
 
 
 
