--- a/src/app/modules/loan-recovery/sbs-fa-branch/sbs-fa-branch.component.html
+++ b/src/app/modules/loan-recovery/sbs-fa-branch/sbs-fa-branch.component.html
@@ -1,1 +1,2 @@
-<kt-recovery-form [RecoveryType]="3" [transactionID]="LnTransactionID" [lcno]="Lcno" [viewOnly]="ViewOnly"></kt-recovery-form>
+<kt-recovery-form [RecoveryType]="3" [transactionID]="LnTransactionID" [lcno]="Lcno"
+                  [viewOnly]="ViewOnly"></kt-recovery-form>
