--- a/src/app/shared/crud/alert-dialog-success/alert-dialog-success.component.html
+++ b/src/app/shared/crud/alert-dialog-success/alert-dialog-success.component.html
@@ -12,7 +12,7 @@
           <span class="heading  mt-5" >Error Code: {{data.code}}</span>
         </div>
         <div class="col-lg-12 text-center  mt-3">
-          <span style="font-weight:500">{{data.description}}</span>
+          <span style="font-weight:500" [innerHTML]="data.description"></span>
         </div>
       </div>
     </div>
