--- a/src/app/modules/loan/cl-upload-document/cl-upload-document.component.scss
+++ b/src/app/modules/loan/cl-upload-document/cl-upload-document.component.scss
@@ -24,3 +24,16 @@ input::-webkit-inner-spin-button {
 input[type=number] {
     -moz-appearance: textfield;
 }
+
+//input:invalid {
+//    border: 2px solid red;
+//}
+
+//body.light .mat-form-field.mat-warn .mat-input-element, body.light .mat-form-field-invalid .mat-input-element, body .light .mat-form-field.mat-warn .mat-input-element, body .light .mat-form-field-invalid .mat-input-element {
+//    caret-color: #dc2626;
+//}
+//body.light .mat-form-field.mat-form-field-invalid .mat-form-field-label, body .light .mat-form-field.mat-form-field-invalid .mat-form-field-label {
+//    color: #dc2626;
+//}
+
+
