--- a/src/app/modules/customer/check-eligibility/check-eligibility.component.html
+++ b/src/app/modules/customer/check-eligibility/check-eligibility.component.html
@@ -209,6 +209,11 @@
                                     <mat-hint align="left">Please enter address <strong></strong></mat-hint>
                                 </mat-form-field>
                             </div>
+                            <!--                            <div class="col-lg-4 kt-margin-bottom-20-mobile">-->
+                            <!--                                <mat-form-field class="mat-form-field-fluid" appearance="outline">-->
+                            <!--                                    <input matInput placeholder="City" formControlName="District"/>-->
+                            <!--                                </mat-form-field>-->
+                            <!--                            </div>-->
                         </div>
 
                     </div>
@@ -257,12 +262,11 @@
                                         <strong>required</strong></mat-error>
                                     <mat-hint align="left">Please enter address <strong></strong></mat-hint>
                                 </mat-form-field>
-                                <div class="col-lg-4 kt-margin-bottom-20-mobile">
-                                    <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                                        <input matInput placeholder="City" formControlName="District"
-                                               maxlength="200" autocomplete="off"/>
-                                    </mat-form-field>
-                                </div>
+                            </div>
+                            <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                                <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                                    <input matInput placeholder="City" formControlName="District"/>
+                                </mat-form-field>
                             </div>
                         </div>
 
