--- a/src/app/modules/loan/save-orr/save-orr.component.html
+++ b/src/app/modules/loan/save-orr/save-orr.component.html
@@ -235,7 +235,7 @@
     </div>
     <div class="form-group kt-form__group mb-2 row">
         <div class="col-lg-12 kt-margin-bottom-20-mobile">
-            <button class="bg-green" mat-raised-button color="primary" (click)="save()" [disabled]="submitted">
+            <button class="bg-green" mat-raised-button color="primary" (click)="SaveOrSubmit()" [disabled]="submitted">
                 <mat-icon class="mr-2">save</mat-icon>
                 {{showFinalOrrTable ? "Submit" : "Save"}}</button>
             <button mat-raised-button color="primary" class="ml-2" (click)="togglePage()" [disabled]="submitted">
