--- a/src/app/modules/customer/check-eligibility/check-eligibility.component.html
+++ b/src/app/modules/customer/check-eligibility/check-eligibility.component.html
@@ -382,7 +382,7 @@
                     </button>
                     <button (click)="submitCWR()"
                             *ngIf="BiometricCredentials" type="button"
-                            class="mat-focus-indicator w-32  mat-flat-button mat-button-base mat-primary"
+                            class="mat-focus-indicator w-32  mat-flat-button mat-button-base bg-green mat-primary"
                             [ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}"
                     >
                         Next
