--- a/src/app/modules/loan/save-orr/save-orr.component.html
+++ b/src/app/modules/loan/save-orr/save-orr.component.html
@@ -61,6 +61,7 @@
     <div class="flex flex-auto overflow-y-scroll overflow-x-hidden ">
         <div class="flex flex-auto overflow-y-scroll overflow-x-hidden" style="flex-direction: column;">
             <div class="flex flex-col flex-auto sm:mb-2 overflow-x-hidden sm:overflow-y-auto">
+<div *ngIf="!showFinalOrrTable">
 
                 <div class="form-group kt-form__group row" *ngIf="dataFetched && ApplicationORR.length>0">
                     <div class="col-lg-12">
@@ -197,8 +198,10 @@
                         </div>
                     </div>
                 </div>
+
+</div>
                 <div class="secondPage" *ngIf="showFinalOrrTable">
-                    <div class="form-group kt-form__group row" *ngIf="dataFetched && ApplicationORR.length>0">
+                    <div class="form-group kt-form__group row" *ngIf="dataFetched && submitArray?.length>0">
                         <div class="col-lg-12">
                             <h3>Final ORR</h3>
                             <div class="table-responsive">
@@ -212,16 +215,25 @@
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    <tr *ngFor="let obj of ApplicationORR; let i = index;">
-                                        <td>{{obj.AppNumberManual}}</td>
-                                        <td>{{obj.SoilTypeORR}}</td>
-                                        <td>{{obj.LandOwnershipORRID}}</td>
-                                        <td>{{obj.MarketAvailORR}}</td>
+                                    <tr *ngFor="let obj of submitArray; let i = index;">
+                                        <td>{{obj.Cnic}}</td>
+                                        <td>{{obj.CustomerName}}</td>
+                                        <td>{{obj.Gl}}</td>
+                                        <td>{{obj.Orr}}</td>
                                     </tr>
                                     </tbody>
                                 </table>
                             </div>
 
+                        </div>
+                    </div>
+                    <div class="form-group kt-form__group row">
+                        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mt-2">
+
+
+                            <mat-checkbox class="example-margin" [checked]="Orrapplied" (change)="Orrapplied = !Orrapplied">
+                                ORR Applied
+                            </mat-checkbox>
                         </div>
                     </div>
                 </div>
@@ -238,7 +250,7 @@
             <button class="bg-green" mat-raised-button color="primary" (click)="SaveOrSubmit()" [disabled]="submitted">
                 <mat-icon class="mr-2">save</mat-icon>
                 {{showFinalOrrTable ? "Submit" : "Save"}}</button>
-            <button mat-raised-button color="primary" class="ml-2" (click)="togglePage()" [disabled]="submitted">
+            <button *ngIf="submitArray?.length>0" mat-raised-button color="primary" class="ml-2" (click)="togglePage()" [disabled]="submitted">
                 <mat-icon>navigate_next</mat-icon>
                 {{showFinalOrrTable ? "Back" : "Next"}}</button>
             &nbsp;&nbsp;&nbsp;&nbsp;<span id="llcInquiryText" class="cursor-pointer" (click)="goToPendingList()"><b>Pending List</b></span>
