--- a/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
+++ b/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
@@ -31,7 +31,7 @@
 
                 <input style="width: 50px;" type="button" mat-raised-button color="primary"
                        class="ml-2 w-1/12 mat-raised-button mat-button-base mat-primary searchLCBtn"
-                       (click)="loanCase(false)" value="..."/>
+                       (click)="loanCase()" value="..."/>
             </div>
 
 
