--- a/src/app/modules/tour-plan/tour-plan/tour-plan.component.html
+++ b/src/app/modules/tour-plan/tour-plan/tour-plan.component.html
@@ -1,8 +1,8 @@
 <div class=" px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <div  *ngIf="isAdd" class="heading pt-3">Create Tour Plan</div>
-    <div  *ngIf="isUpdate" class="heading pt-3">Update Tour Plan</div>
+    <div  *ngIf="isAdd" class="heading mt-3">Create Tour Plan</div>
+    <div  *ngIf="isUpdate" class="heading mt-3">Update Tour Plan</div>
     <!-- Header -->
-    <div  [formGroup]="TourForm" class="mt-4">
+    <div  [formGroup]="TourForm" class="mt-3">
 
         <div class="row">
             <div class="col-lg-3 col-sm-12">
