--- a/src/app/modules/loan/save-orr/save-orr.component.html
+++ b/src/app/modules/loan/save-orr/save-orr.component.html
@@ -2,8 +2,50 @@
     class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
     <div class="heading">Applying ORR</div>
     <!-- Header -->
-    <div class="pt-4" [formGroup]="ORRForm">
+    <div *ngIf="!showFinalOrrTable" class="pt-4" [formGroup]="ORRForm">
+        <!--    application header-->
+        <div class="form-group kt-form__group row" *ngIf="dataFetched && ApplicationHeader">
+            <div class="col-lg-12">
+                <!--            <h3 class="heading">sam</h3>-->
+                <div class="table-responsive">
+                    <table class="table table-striped">
+                        <thead>
+                        <tr class="table-header-background">
+                            <th>Branch</th>
+                            <th>Circle</th>
+                            <th>LC #</th>
+                            <th>LC Auto#</th>
+                            <th>LA File/Booklet#</th>
+                            <th>Application Date</th>
+                            <th>Status</th>
+                            <th>Status (Post Sanction)</th>
+                            <th>Dev Amount</th>
+                            <th>Prod Amount</th>
+                            <th>DEPOSIT ACC#</th>
+                            <th>Sanction Date</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>{{ApplicationHeader?.BranchName}}</td>
+                            <td>{{ApplicationHeader?.CircleCode}}</td>
+                            <td>{{ApplicationHeader?.LoanCaseNo}}</td>
+                            <td>{{ApplicationHeader?.LoanAutoNo}}</td>
+                            <td>{{ApplicationHeader?.AppNumberManual}}</td>
+                            <td>{{ApplicationHeader?.AppDate}}</td>
+                            <td>{{ApplicationHeader?.StatusName}}</td>
+                            <td>{{ApplicationHeader?.StatusNamePS}}</td>
+                            <td>{{ApplicationHeader?.DevAmount}}</td>
+                            <td>{{ApplicationHeader?.ProdAmount}}</td>
+                            <td>{{ApplicationHeader?.AccountNo}}</td>
+                            <td>{{ApplicationHeader?.SanctionDate}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
 
+            </div>
+        </div>
 
         <div class="row">
             <div class="col-lg-3 col-sm-12">
@@ -58,7 +100,7 @@
         </div>
 
     </div>
-    <div class="flex flex-auto overflow-y-scroll overflow-x-hidden ">
+    <div class="flex flex-auto overflow-y-scroll overflow-x-hidden">
         <div class="flex flex-auto overflow-y-scroll overflow-x-hidden" style="flex-direction: column;">
             <div class="flex flex-col flex-auto sm:mb-2 overflow-x-hidden sm:overflow-y-auto">
 <div *ngIf="!showFinalOrrTable">
@@ -93,6 +135,7 @@
 
                     </div>
                 </div>
+
 
                 <div class="form-group kt-form__group row " *ngIf="dataFetched && CustomerORR.length>0">
                     <div class="col-lg-12">
