--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -572,9 +572,18 @@ img{
 
 
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-  // #collapseExample{
-  //   height: 300px;
-  // }
+  #collapseExample{
+    min-height: 200px;
+  }
+  .collapsing {
+    height: 0;
+    overflow: hidden;
+    transition: height 0.35s ease;
+}
+
+  .collapse:not(.show) {
+    display: none;
+}
   .mat-sort-header-content{
     color: white;
   }
