--- a/src/app/modules/loan/save-orr/save-orr.component.html
+++ b/src/app/modules/loan/save-orr/save-orr.component.html
@@ -138,9 +138,10 @@
 
 
                 <div class="form-group kt-form__group row " *ngIf="dataFetched && CustomerORR.length>0">
+
                     <div class="col-lg-12">
-                        <span class="heading">Customers</span>
                         <div class="table-responsive">
+                            <h3 class="heading"> Customers</h3>
                             <table class="table table-striped">
                                 <thead>
                                 <tr class="table-header-background">
